tons of writing

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,42 +1,225 @@
-@article{huber2007identifying,
-  title={Identifying the persuasive effects of presidential advertising},
-  author={Huber, Gregory A and Arceneaux, Kevin},
-  journal={American Journal of Political Science},
-  volume={51},
+@article{wronski2018tale,
+  title={A Tale of Two Democrats: How Authoritarianism Divides the Democratic Party},
+  author={Wronski, Julie and Bankert, Alexa and Amira, Karyn and Johnson, April A and Levitan, Lindsey C},
+  journal={The Journal of Politics},
+  volume={80},
   number={4},
-  pages={957--977},
-  year={2007},
-  publisher={Wiley Online Library}
+  pages={1384--1388},
+  year={2018},
+  publisher={University of Chicago Press Chicago, IL}
 }
 
-@article{keele2015geographic,
-  title={Geographic boundaries as regression discontinuities},
-  author={Keele, Luke J and Titiunik, Rocio},
-  journal={Political Analysis},
-  volume={23},
-  number={1},
-  pages={127--155},
-  year={2015},
+@book{klar2016independent,
+  title={Independent Politics},
+  author={Klar, Samara and Krupnikov, Yanna},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
+@book{erikson2002macro,
+  title={The Macro Polity},
+  author={Erikson, Robert S and MacKuen, Michael B and Stimson, James A},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
+@book{achen2017democracy,
+  title={Democracy For Realists: Why Elections do Not Produce Responsive Government},
+  author={Achen, Christopher H and Bartels, Larry M},
+  volume={4},
+  year={2017},
+  publisher={Princeton University Press}
+}
+
+@article{peterson2018echo,
+  title={Echo Chambers and Partisan Polarization: Evidence From the 2016 Presidential Campaign},
+  author={Peterson, Erik and Goel, Sharad and Iyengar, Shanto},
+  journal={Working Paper. https://pcl.stanford.edu/research/2017/peterson-echo-chambers.pdf},
+  year={2018}
+}
+
+@book{key1949southern,
+  title={Southern Politics},
+  author={Key Jr, Valdimer O},
+  year={1949}
+}
+
+@book{ellis2012ideology,
+  title={Ideology in America},
+  author={Ellis, Christopher and Stimson, James A},
+  year={2012},
   publisher={Cambridge University Press}
 }
 
 
-@article{krasno2008televised,
-  title={Do televised presidential ads increase voter turnout? Evidence from a natural experiment},
-  author={Krasno, Jonathan S and Green, Donald P},
+@article{downs1957economic,
+  title={An Economic Theory of Democracy},
+  author={Downs, Anthony and others},
+  year={1957},
+  publisher={New York}
+}
+
+@article{malka2010more,
+  title={More than Ideology: Conservative--Liberal Identity and Receptivity to Political Cues},
+  author={Malka, Ariel and Lelkes, Yphtach},
+  journal={Social Justice Research},
+  volume={23},
+  number={2-3},
+  pages={156--188},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{brewer2001many,
+  title={The Many Faces of Socialidentity: Implications for Political Psychology},
+  author={Brewer, Marilynn B},
+  journal={Political psychology},
+  volume={22},
+  number={1},
+  pages={115--125},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{riker1968theory,
+  title={A Theory of the Calculus of Voting},
+  author={Riker, William H and Ordeshook, Peter C},
+  journal={American Political Science Review},
+  volume={62},
+  number={1},
+  pages={25--42},
+  year={1968},
+  publisher={Cambridge University Press}
+}
+
+
+@book{americanvoter,
+  author = {Campbell, Angus and Converse, Philip E. and Miller, Warren E. and Stokes, Donald E.},
+  publisher = {University of Chicago Press},
+  biburl = {https://www.bibsonomy.org/bibtex/220add7a0781df57220c486b97e99d8ea/jwbowers},
+  timestamp = {2009-10-28T04:43:03.000+0100},
+  title = {The American Voter},
+  year = {1960}
+}
+
+
+
+@book{key1966responsible,
+  title={The responsible electorate},
+  author={Key, Valdimer Orlando and others},
+  year={1966},
+  publisher={Harvard University Press Cambridge, MA}
+}
+
+@article{abramowitz2008polarization,
+  title={Is polarization a myth?},
+  author={Abramowitz, Alan I and Saunders, Kyle L},
   journal={The Journal of Politics},
   volume={70},
-  number={1},
-  pages={245--261},
+  number={2},
+  pages={542--555},
   year={2008},
   publisher={Cambridge University Press New York, USA}
 }
 
-@article{gerber2007influence,
-  title={The influence of television and radio advertising on candidate evaluations: Results from a large scale randomized experiment},
-  author={Gerber, Alan and Gimpel, James G and Green, Donald P and Shaw, Daron R},
-  journal={Unpublished paper, Yale University},
-  year={2007}
+@article{kleck1996crime,
+  title={Crime, culture conflict and the sources of support for gun control: A multilevel application of the general social surveys},
+  author={Kleck, Gary},
+  journal={American Behavioral Scientist},
+  volume={39},
+  number={4},
+  pages={387--404},
+  year={1996},
+  publisher={Sage Publications Thousand Oaks}
+}
+
+@article{simonson2016copwatching,
+  title={Copwatching},
+  author={Simonson, Jocelyn},
+  journal={California Law Review},
+  volume={104},
+  pages={391},
+  year={2016},
+  publisher={HeinOnline}
+}
+
+@article{gomez2006rethinking,
+  title={Rethinking Symbolic Racism: Evidence of Attribution Bias},
+  author={Gomez, Brad T and Wilson, J Matthew},
+  journal={The Journal of Politics},
+  volume={68},
+  number={3},
+  pages={611--625},
+  year={2006},
+  publisher={Cambridge University Press New York, USA}
+}
+
+@article{kinder1981prejudice,
+  title={Prejudice and Politics: Symbolic Racism Versus Racial Threats to the Good Life.},
+  author={Kinder, Donald R and Sears, David O},
+  journal={Journal of personality and social psychology},
+  volume={40},
+  number={3},
+  pages={414},
+  year={1981},
+  publisher={American Psychological Association}
+}
+
+@book{melzer2009gun,
+  title={Gun crusaders: The NRA's culture war},
+  author={Melzer, Scott},
+  year={2009},
+  publisher={NYU Press}
+}
+
+@article{cottrol1994never,
+  title={Never Intended to Be Applied to the White Population: Firearms Regulation and Racial Disparity-The Redeemed South's Legacy to a National Jurisprudence},
+  author={Cottrol, Robert J and Diamond, Raymond T},
+  journal={Chi.-Kent L. Rev.},
+  volume={70},
+  pages={1307},
+  year={1994},
+  publisher={HeinOnline}
+}
+
+@article{kleck2011effect,
+  title={The Effect of Perceived Risk and Victimization on Plans to Purchase a Gun for Self-Protection},
+  author={Kleck, Gary and Kovandzic, Tomislav and Saber, Mark and Hauser, Will},
+  journal={Journal of Criminal Justice},
+  volume={39},
+  number={4},
+  pages={312--319},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{filindra2016racial,
+  title={Racial Resentment and Whites’ Gun Policy Preferences in Contemporary America},
+  author={Filindra, Alexandra and Kaplan, Noah J},
+  journal={Political behavior},
+  volume={38},
+  number={2},
+  pages={255--275},
+  year={2016},
+  publisher={Springer}
+}
+
+@book{winkler2011gunfight,
+  title={Gunfight: The Battle Over the Right to Bear Arms in America},
+  author={Winkler, Adam},
+  year={2011},
+  publisher={WW Norton \& Company}
+}
+
+@article{enos2016demolition,
+  title={What the demolition of public housing teaches us about the impact of racial threat on political behavior},
+  author={Enos, Ryan D},
+  journal={American Journal of Political Science},
+  volume={60},
+  number={1},
+  pages={123--142},
+  year={2016},
+  publisher={Wiley Online Library}
 }
 
 @article{adler1997demand,
@@ -607,12 +790,6 @@
   publisher={University of Chicago Press Chicago, IL}
 }
 
-@book{abramowitz2010disappearing,
-  title={The Disappearing Center: Engaged Citizens, Polarization, and American Democracy},
-  author={Abramowitz, Alan},
-  year={2010},
-  publisher={Yale University Press}
-}
 
 @book{fiorina2012disconnect,
   title={Disconnect: The Breakdown of Representation in American Politics},
