--- a/fig/table-primaries.tex
+++ b/fig/table-primaries.tex
@@ -1,15 +1,16 @@
 \begin{table}[H]
 \centering
-\begin{tabular}{ll>{\raggedleft\arraybackslash}p{1.8cm}>{\raggedleft\arraybackslash}p{1.8cm}>{\raggedleft\arraybackslash}p{1.8cm}>{\raggedleft\arraybackslash}p{1.8cm}>{\raggedleft\arraybackslash}p{1.8cm}>{\raggedleft\arraybackslash}p{1.8cm}}
+\begin{tabular}{ll>{\raggedleft\arraybackslash}p{3cm}>{\raggedleft\arraybackslash}p{3cm}>{\raggedleft\arraybackslash}p{3cm}>{}p{3cm}>{}p{3cm}>{}p{3cm}}
 \toprule
-\textbf{Year} & \textbf{Vote Choice} & \textbf{Net Partisan Affect} & \textbf{Dem Affect} & \textbf{Rep Affect}  & \textbf{Self Ideology}\\
+\textbf{Year} & \textbf{Vote Choice} & \textbf{Net Partisan Affect} & \textbf{Dem Affect} & \textbf{Rep Affect}\\
 \midrule
-2008 & Didn't Vote & 47.43 & 78.55 & 31.76 & 3.42\\
-2008 & Hillary Clinton & 48.37 & 76.51 & 28.14 & 3.62\\
-2008 & Barack Obama & 53.63 & 80.40 & 26.77 &  3.11\\
-2016 & Didn't Vote & 45.80 & 71.99 & 28.60 & 3.21\\
-2016 & Hillary Clinton & 60.19 & 82.62 & 22.48 & 2.83\\
-2016 & Bernie Sanders & 48.34 & 67.70 & 21.45 & 2.49\\
+2008 & Didn't Vote & 47.43 & 78.55 & 31.76\\
+2008 & Hillary Clinton & 48.37 & 76.51 & 28.14\\
+2008 & Barack Obama & 53.63 & 80.40 & 26.77\\
+2016 & Didn't Vote & 45.80 & 71.99 & 28.60\\
+2016 & Hillary Clinton & 60.19 & 82.62 & 22.48\\
+\addlinespace
+2016 & Bernie Sanders & 48.34 & 67.70 & 21.45\\
 \bottomrule
 \end{tabular}
 \end{table}
