turned version of fyp
Going to trim and basically redo from here. FYP bad, paper needs must be good.

--- a/fig/repl_2016_model.tex
+++ b/fig/repl_2016_model.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Apr 21, 2020 - 11:58:55 AM
+% Date and time: Sun, Apr 26, 2020 - 6:13:03 PM
 % Requires LaTeX packages: dcolumn 
 \begin{table}[H] \centering 
   \caption{Original Models (Extended to 2016)} 
